<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:isScrollContainer="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/main_select_person" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radioButtonBDMendes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_select_person_bdmendes" />
        <RadioButton
            android:id="@+id/radioButtonSirze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_select_person_sirze" />
        <RadioButton
            android:id="@+id/radioButtonNando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_select_person_nando" />
        <RadioButton
            android:id="@+id/radioButtonBCGomes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_select_person_bcgomes" />
    </RadioGroup>

    <Button
        android:id="@+id/selectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="sele"
        android:text="@string/main_select_person_button" />

</LinearLayout>